implemented streaming of simulation data via socket.io, added minimal frontend for debugging

--- a/demo/frontend/src/App.css
+++ b/demo/frontend/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.data {
+  width: 100vw;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.warmup {
+  max-height: 20vh;
+}
+
+.market {
+  max-height: 60vh;
+}
