--- a/demo/frontend/src/App.css
+++ b/demo/frontend/src/App.css
@@ -1,16 +1,23 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dashboard {
+  height: calc(100vh - 2rem);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-bottom: 2rem;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 4rem 3.5rem;
 }
 
 .options {
